--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aws-sdk": "^2.36.0",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
+    "blink-diff": "^1.0.13",
     "bluebird": "^3.4.6",
     "common-tags": "^1.4.0",
     "geolib": "^2.0.22",
@@ -19,7 +20,9 @@
     "qs": "^6.4.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
-    "winston": "^2.3.1"
+    "sharp": "^0.18.1",
+    "winston": "^2.3.1",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
