--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^4.17.2",
     "minimatch": "^3.0.4",
     "pretty-bytes": "^4.0.2",
+    "promise-retryify": "^0.5.0",
     "qs": "^6.4.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
