--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,8 @@
 
 export RENDER_API_URL=http://51.255.81.67:8001
 export RENDER_API_KEY=
+export PLACEMENT_API_URL=http://51.255.81.67:8003
+export PLACEMENT_API_KEY=
 export AWS_S3_BUCKET_NAME=
 export AWS_ACCESS_KEY_ID=
 export AWS_SECRET_ACCESS_KEY=
