--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alvar Carto",
   "license": "UNLICENSED",
   "dependencies": {
+    "@mapbox/sphericalmercator": "^1.1.0",
     "aws-sdk": "^2.36.0",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
@@ -24,9 +25,9 @@
     "qs": "^6.4.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
-    "sharp": "^0.18.1",
+    "sharp": "^0.25.2",
     "winston": "^2.3.1",
-    "yargs": "^8.0.2"
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
