--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "babel-preset-es2015": "^6.18.0",
     "blink-diff": "^1.0.13",
     "bluebird": "^3.4.6",
+    "canvas": "^2.6.1",
     "common-tags": "^1.4.0",
     "geolib": "^2.0.22",
     "js-combinatorics": "^0.5.2",
     "lodash": "^4.17.2",
     "minimatch": "^3.0.4",
+    "pdfjs-dist": "^2.3.200",
     "pretty-bytes": "^4.0.2",
     "promise-retryify": "^0.5.0",
     "qs": "^6.4.0",
