--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "geolib": "^2.0.22",
     "js-combinatorics": "^0.5.2",
     "lodash": "^4.17.2",
+    "millify": "^3.2.1",
     "minimatch": "^3.0.4",
+    "moment": "^2.25.3",
+    "mustache": "^4.0.1",
     "pdfjs-dist": "^2.3.200",
     "pretty-bytes": "^4.0.2",
-    "promise-retryify": "^0.5.0",
+    "promise-retryify": "^1.0.0",
     "qs": "^6.4.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0",
